--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @font-face {
     font-family: "Inter";
     src: local("Inter"),
-      url("../fonts/Inter.ttf") format("truetype");
+      url("./fonts/Inter.ttf") format("truetype");
     font-weight: normal;
   }
+
+body {
+  font-family: "Inter";
+}
